--- a/myblogsite/blog/templates/post_detail.html
+++ b/myblogsite/blog/templates/post_detail.html
@@ -46,12 +46,10 @@
                                 <div class="vote-buttons mr-3">
                                     <button id="post_upvote" class="btn btn-outline-success mr-2" style="cursor:pointer; display:inline-block;">
                                         <i class="fas fa-thumbs-up"></i> 
-                                        Upvote:
                                         <div id="post-upvote-count">{{ post_upvotes }}</div>
                                     </button>
                                     <button id="post_downvote" class="btn btn-outline-danger" style="cursor:pointer; display:inline-block;">
                                         <i class="fas fa-thumbs-down"></i> 
-                                        Downvote: 
                                         <div id="post-downvote-count">{{ post_downvotes }}</div>
                                     </button>
                                 </div>
@@ -116,12 +114,14 @@
                                             <h5 class="card-title mb-1">{{ comment.user_ref__username }}</h5>
                                             <h6 class="card-subtitle mb-2 text-muted">{{ comment.created_at }}</h6>
                                         </div>
+                                        <div>
                                         {% if user.id == comment.user_ref__id %}
-                                            <div>
-                                                <a href="{% url 'edit_comment' comment_id=comment.id user_post_id=user_post_pk %}" class="btn btn-sm btn-outline-primary">Edit</a>
-                                                <a href="{% url 'delete_comment' comment_id=comment.id user_post_id=user_post_pk %}" class="btn btn-sm btn-outline-danger" onclick="return confirm('Are you sure you want to delete this comment?');">Delete</a>
-                                            </div>
+                                            <a href="{% url 'edit_comment' comment_id=comment.id user_post_id=user_post_pk %}" class="btn btn-sm btn-outline-primary">Edit</a>
+                                            <a href="{% url 'delete_comment' comment_id=comment.id user_post_id=user_post_pk %}" class="btn btn-sm btn-outline-danger" onclick="return confirm('Are you sure you want to delete this comment?');">Delete</a>
+                                        {% else %}
+                                            <a href="{% url 'report_comment' comment_id=comment.id user_post_id=user_post_pk %}" class="btn btn-dark"><i class="fas fa-biohazard"></i> Report Comment</a>
                                         {% endif %}
+                                        </div>
                                     </div>
                                     <p class="card-text mt-2">{{ comment.content }}</p>
                                     {% if comment.image %}
@@ -129,8 +129,8 @@
                                     {% endif %}
                                     <div class="mt-3 comment-vote-counts">
                                         <input type="hidden" name="comment_id" value="{{ comment.id }}">
-                                        <button class="btn btn-outline-success btn-sm mr-2 comment-upvote" data-comment-id="{{ comment.id }}">Upvote: {{ comment.upvotes }}</button>
-                                        <button class="btn btn-outline-danger btn-sm comment-downvote" data-comment-id="{{ comment.id }}">Downvote: {{ comment.downvotes }}</button>
+                                        <button class="btn btn-outline-success btn-sm mr-2 comment-upvote" data-comment-id="{{ comment.id }}"><i class="fas fa-thumbs-up"> </i>{{ comment.upvotes }}</button>
+                                        <button class="btn btn-outline-danger btn-sm comment-downvote" data-comment-id="{{ comment.id }}"><i class="fas fa-thumbs-down"> </i> {{ comment.downvotes }}</button>
                                     </div>
                                 </div>
                             </div>
