--- a/myblogsite/blog/templates/post_detail.html
+++ b/myblogsite/blog/templates/post_detail.html
@@ -119,7 +119,7 @@
                                             <a href="{% url 'edit_comment' comment_id=comment.id user_post_id=user_post_pk %}" class="btn btn-sm btn-outline-primary">Edit</a>
                                             <a href="{% url 'delete_comment' comment_id=comment.id user_post_id=user_post_pk %}" class="btn btn-sm btn-outline-danger" onclick="return confirm('Are you sure you want to delete this comment?');">Delete</a>
                                         {% else %}
-                                            <a href="{% url 'report_comment' comment_id=comment.id user_post_id=user_post_pk %}" class="btn btn-dark"><i class="fas fa-biohazard"></i> Report Comment</a>
+                                            <a href="{% url 'report_comment' comment_id=comment.id%}" class="btn btn-dark"><i class="fas fa-biohazard"></i> Report Comment</a>
                                         {% endif %}
                                         </div>
                                     </div>
