--- a/myblogsite/blog/templates/post_detail.html
+++ b/myblogsite/blog/templates/post_detail.html
@@ -29,9 +29,9 @@
 
                         <h2 class="d-inline-block">{{ post.title }}</h2>
                         <div class="d-inline-block ml-2">
-                            <img src="/media/{{ post.user_ref.picture }}" alt="{{ post.user_ref.username }}" class="rounded-circle" style="width: 40px; height: 40px; object-fit: cover;">
+                            <img src="/media/{{ post.user_ref.picture }}" alt="{{ post.user_ref.username }}" class="rounded-circle" style="width: 40px; height: 40px; object-fit: cover;" onclick="window.location.href='/profile/{{ post.user_ref.id }}'">
                         </div>
-                        <h5 class="d-inline-block ml-2 text-muted">by {{ post.user_ref.username }}</h5>
+                        <h5 class="d-inline-block ml-2 text-muted" onclick="window.location.href='/profile/{{ post.user_ref.id }}'">by {{ post.user_ref.username }}</h5>
                         <span class="d-inline-block ml-2 text-muted">{{ post.created_at }}</span>
                     </div>
                     <div class="post-content mb-4">
@@ -106,8 +106,8 @@
                                 <div class="card-body">
                                     <div class="d-flex justify-content-between">
                                         <div>
-                                            <img src="/media/{{ comment.user_ref__picture }}" alt="{{ comment.user_ref__username }}" class="rounded-circle" style="width: 40px; height: 40px; object-fit: cover;">
-                                            <h5 class="card-title mb-1">{{ comment.user_ref__username }}</h5>
+                                            <img src="/media/{{ comment.user_ref__picture }}" alt="{{ comment.user_ref__username }}" class="rounded-circle" style="width: 40px; height: 40px; object-fit: cover;"onclick="window.location.href='/profile/{{ comment.user_ref__id }}'">
+                                            <h5 class="card-title mb-1"onclick=" window.location.href='/profile/{{ comment.user_ref__id }}'">{{ comment.user_ref__username }}</h5>
                                             <h6 class="card-subtitle mb-2 text-muted">{{ comment.created_at }}</h6>
                                         </div>
                                         {% if user.id == comment.user_ref__id %}
