--- a/myblogsite/blog/templates/header.html
+++ b/myblogsite/blog/templates/header.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
     <link rel="stylesheet" href="{% static 'blog/css/global.css' %}">
-    <link rel="stylesheet" href="{% static 'blog/css/header.css' %}">
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 </head>
 <body>
+    <link rel="stylesheet" href="{% static 'blog/css/header.css' %}">
     <nav class="navbar navbar-dark bg-dark">
         <div class="container d-flex justify-content-between align-items-center">
             <div class="d-flex align-items-center">
@@ -16,6 +16,19 @@
                 <a class="nav-link text-light ml-3" href="/">Home</a> 
             </div>
             <div class="d-flex align-items-center">
+            {% if current_user %}
+                {% if current_user.is_authenticated %}
+                    <img src="{{ current_user.picture.url }}" alt="Profile Picture" class="profile-img" style="height:30px;width:30px;border-radius:50%;">
+                    {% if current_user.is_staff %}
+                    <a class="nav-link text-light ml-2" href="/adminpanel/">Admin</a>
+                    {% endif %}
+                    <a class="nav-link text-light ml-2" href="/profile/">Profile</a>
+                    <a class="nav-link text-light ml-2" href="{% url 'logout' %}">Logout</a>
+                {% else %}
+                    <a class="nav-link text-light" href="/login/">Login</a>
+                    <a class="nav-link text-light ml-2" href="/register/">Register</a>
+                {% endif %}
+            {% else %}
                 {% if user.is_authenticated %}
                     <img src="{{ user.picture.url }}" alt="Profile Picture" class="profile-img" style="height:30px;width:30px;border-radius:50%;">
                     {% if user.is_staff %}
@@ -27,6 +40,7 @@
                     <a class="nav-link text-light" href="/login/">Login</a>
                     <a class="nav-link text-light ml-2" href="/register/">Register</a>
                 {% endif %}
+            {% endif %}
             </div>
         </div>
     </nav>
