--- a/myblogsite/blog/templates/report_comment.html
+++ b/myblogsite/blog/templates/report_comment.html
@@ -9,15 +9,29 @@
 <body>
 
     {% include 'header.html' %}
-    <form action="" method="post" enctype="multipart/form-data" style = "margin: 0 50px;">
-        <h1>Post Here</h1>
-        {% csrf_token %}
-        
-        {{ form.non_field_errors }}
-        
-        {{ form.as_p }}
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="card">
+                    <div class="card-header bg-dark text-white">
+                        <h2 class="mb-0">Post Here</h2>
+                    </div>
+                    <div class="card-body">
+                        <form action="" method="post" enctype="multipart/form-data">
+                            {% csrf_token %}
+                            
+                            {{ form.non_field_errors }}
+                            
+                            {{ form.as_p }}
 
-        <button type="submit" class="btn btn-dark">Submit</button>
-    </form>
+                            <div class="text-center">
+                                <button type="submit" class="btn btn-dark">Submit</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
