fixed profile link

--- a/myblogsite/blog/templates/Profile/profile_deleted_posts.html
+++ b/myblogsite/blog/templates/Profile/profile_deleted_posts.html
@@ -9,7 +9,7 @@
                         <div class="card-body p-2 p-sm-3">
                             <div class="media forum-item">
                                 <a href="#" data-toggle="collapse" data-target=".forum-content">
-                                    <img src="https://bootdey.com/img/Content/avatar/avatar1.png" class="mr-3 rounded-circle" width="50" alt="User" />
+                                    <img src="/media/{{post.user_ref.picture}}" class="mr-3 rounded-circle" width="50" alt="User" />
                                 </a>
                                 <div class="media-body align-self-center">
                                     <h6>
