--- a/myblogsite/blog/templates/Profile/profile_dashboard.html
+++ b/myblogsite/blog/templates/Profile/profile_dashboard.html
@@ -6,7 +6,7 @@
         <div class="card mb-2">
             <div class="card-body p-2 p-sm-3">
                 <div class="media forum-item">
-                    <a href="#" data-toggle="collapse" data-target=".forum-content"><img src="{{ picture }}" class="mr-3 rounded-circle" width="50" alt="User" /></a>
+                    <a href="#" data-toggle="collapse" data-target=".forum-content"><img src="/media/{{ user_post.user_ref.picture }}" class="mr-3 rounded-circle" width="50" alt="User" /></a>
                     <div class="media-body align-self-center">
                         <h6><a href="#" data-toggle="collapse" data-target=".forum-content" class="text-body">{{ user_post.post_ref.title }}</a></h6>
                     </div>
@@ -27,7 +27,7 @@
         <div class="card mb-2">
             <div class="card-body p-2 p-sm-3">
                 <div class="media forum-item">
-                    <a href="#" data-toggle="collapse" data-target=".forum-content"><img src="{{ picture }}" class="mr-3 rounded-circle" width="50" alt="User" /></a>
+                    <a href="#" data-toggle="collapse" data-target=".forum-content"><img src="/media/{{ user_comment.user_ref.picture }}" class="mr-3 rounded-circle" width="50" alt="User" /></a>
                     <div class="media-body align-self-center">
                         <h6><a href="#" data-toggle="collapse" data-target=".forum-content" class="text-body">{{ user_comment.content }}</a></h6>
                     </div>
