--- a/myblogsite/blog/templates/post_detail.html
+++ b/myblogsite/blog/templates/post_detail.html
@@ -37,7 +37,7 @@
                     <div class="post-content mb-4">
                         <p>{{ post.content }}</p>
                         {% if post.image %}
-                            <img src="{{ post.image.url }}" alt="{{ post.title }}" class="img-fluid rounded">
+                            <img src="{{ post.image.url }}" alt="{{ post.title }}" class="img-fluid rounded" style="cursor:pointer;">
                         {% endif %}
                     </div>
                     <div class="container">
