Posts/Profile Accessibility

--- a/myblogsite/blog/templates/Profile/profile_dashboard.html
+++ b/myblogsite/blog/templates/Profile/profile_dashboard.html
@@ -3,7 +3,7 @@
         <h5>Posts</h5>
         <hr>
         {% for user_post in user_posts %}
-        <div class="card mb-2">
+        <div class="card mb-2" onclick="window.location.href = '/post_detail/{{ user_post.id }}/1/'">
             <div class="card-body p-2 p-sm-3">
                 <div class="media forum-item">
                     <a href="#" data-toggle="collapse" data-target=".forum-content"><img src="/media/{{ user_post.user_ref.picture }}" class="mr-3 rounded-circle" width="50" alt="User" /></a>
