Post Detail UI/UX update

--- a/myblogsite/blog/templates/Admin/admin.html
+++ b/myblogsite/blog/templates/Admin/admin.html
@@ -48,7 +48,7 @@
                         <h2>Profile</h2>
                         <img src="/media/{{ request.user.picture }}" alt="Profile Picture" class="profile-pic" style="height: 100px;">
                         
-                        <div>
+                        <div class="ml-4">
                             <div style="display: inline;">
                                 <button id="showUsers" class="btn btn-dark" style="margin: 10px;">Users</button>
                                 </br>
