--- a/myblogsite/blog/templates/post_detail.html
+++ b/myblogsite/blog/templates/post_detail.html
@@ -25,23 +25,33 @@
                 {% include 'sidebar.html' %}
 
                 <div class="inner-main">
-                    <div class="inner-main-header mb-4">
-
-                        <h2 class="d-inline-block">{{ post.title }}</h2>
-                        <div class="d-inline-block ml-2" style="cursor: pointer;">
-                            <img src="/media/{{ post.user_ref.picture }}" alt="{{ post.user_ref.username }}" class="rounded-circle" style="width: 40px; height: 40px; object-fit: cover;" onclick="window.location.href='/profile/{{ post.user_ref.id }}'">
+                    <div class="inner-main-header mb-4" style="height: 100px;">
+                        <div class="d-flex flex-column">
+                            <!-- User Image and Info -->
+                            <div class="d-flex align-items-center mb-2">
+                                <div style="cursor: pointer;">
+                                    <img src="/media/{{ post.user_ref.picture }}" alt="{{ post.user_ref.username }}" class="rounded-circle" style="width: 40px; height: 40px; object-fit: cover;" onclick="window.location.href='/profile/{{ post.user_ref.id }}'">
+                                </div>
+                                <h5 class="text-muted ml-2 mb-0" onclick="window.location.href='/profile/{{ post.user_ref.id }}'" style="cursor: pointer;">by {{ post.user_ref.username }}</h5>    
+                                <span class="ml-2 text-muted"> • {{ post.created_at }}</span>
+                            </div>
+                    
+                            <!-- Post Title -->
+                            <div>
+                                <h2 style="font-weight: bold;">{{ post.title }}</h2>
+                            </div>
                         </div>
-                        <h5 class="d-inline-block ml-2 text-muted" onclick="window.location.href='/profile/{{ post.user_ref.id }}'" style="cursor: pointer;">by {{ post.user_ref.username }}</h5>
-                        <span class="d-inline-block ml-2 text-muted">{{ post.created_at }}</span>
                     </div>
-                    <div class="post-content mb-4">
+                    <div class="post-content mb-4 px-4">
                         <p>{{ post.content }}</p>
                         {% if post.image %}
+                        <div class="d-flex justify-content-center">
                             <img src="{{ post.image.url }}" alt="{{ post.title }}" class="img-fluid rounded" style="cursor:pointer;">
+                        </div>
                         {% endif %}
                     </div>
                     <div class="container">
-                        <div class="d-flex">
+                        <div class="d-flex justify-content-between">
                             <div class="d-flex align-items-center">
                                 <div class="vote-buttons mr-3">
                                     <button id="post_upvote" class="btn btn-outline-success mr-2" style="cursor:pointer; display:inline-block;">
@@ -69,43 +79,41 @@
                                 {% endfor %}
                             </div>
 
-                            <div class="d-flex align-items-center">
+                            <div class="d-flex align-items-center update-delete-buttons">
                                 <div class="mr-2">
-                                    <a href="{% url 'add_favorite' user_post_pk %}">
+                                    <a href="{% url 'add_favorite' user_post_pk %}" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="Add to favorites">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
                                             <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"></path>
                                         </svg>
                                     </a>
                                 </div>
-                                <div class="ml-auto update-delete-buttons">
-                                    {% if user.pk == post.user_ref.pk %}
-                                        <form method="POST" action="{% url 'delete_post' user_post_pk %}" onsubmit="return confirm('Are you sure you want to delete this post?')" class="mr-2">
-                                            {% csrf_token %}
-                                            <button type="submit" class="btn btn-danger">
-                                                <i class="fas fa-trash-alt"></i> Delete post
-                                            </button>
-                                        </form>
-                                        <form method="POST" action="{% url 'update_post' user_post_pk %}">
-                                            {% csrf_token %}
-                                            <button type="submit" class="btn btn-dark">
-                                                <i class="fas fa-edit"></i> Update post
-                                            </button>
-                                        </form>
-                                    {% else %}
-                                        <form action = "{% url 'report_post' user_post_pk %}">
-                                            <button type="submit" class="btn btn-dark">
-                                                <i class="fas fa-edit"></i> Report post
-                                            </button>
-                                        </form>
-                                    {% endif %}
-                                </div>
+                                {% if user.pk == post.user_ref.pk %}
+                                    <form method="POST" action="{% url 'delete_post' user_post_pk %}" onsubmit="return confirm('Are you sure you want to delete this post?')" class="mr-2">
+                                        {% csrf_token %}
+                                        <button type="submit" class="btn btn-danger" data-toggle="tooltip" data-placement="top" title="Delete Post">
+                                            <i class="fas fa-trash-alt"></i>
+                                        </button>
+                                    </form>
+                                    <form method="POST" action="{% url 'update_post' user_post_pk %}">
+                                        {% csrf_token %}
+                                        <button type="submit" class="btn btn-dark" data-toggle="tooltip" data-placement="top" title="Update Post">
+                                            <i class="fas fa-edit"></i>
+                                        </button>
+                                    </form>
+                                {% else %}
+                                    <form action = "{% url 'report_post' user_post_pk %}">
+                                        <button type="submit" class="btn btn-dark" data-toggle="tooltip" data-placement="top" title="Report Post">
+                                            <i class="fas fa-biohazard"></i>
+                                        </button>
+                                    </form>
+                                {% endif %}
                             </div>
                         </div>
                     </div>
 
-                    <h2 class="mt-4">Comments:</h2>
-                    <div id="comment-section" class="mt-3">
-                        {% for comment in comments %}
+                    <h2 class="mt-4 px-4">Comments:</h2>
+                    <div id="comment-section" class="mt-3 px-4">
+                        {% for comment in comments %}   
                             <div class="card mb-3">
                                 <div class="card-body">
                                     <div class="d-flex justify-content-between">
@@ -119,7 +127,7 @@
                                             <a href="{% url 'edit_comment' comment_id=comment.id user_post_id=user_post_pk %}" class="btn btn-sm btn-outline-primary">Edit</a>
                                             <a href="{% url 'delete_comment' comment_id=comment.id user_post_id=user_post_pk %}" class="btn btn-sm btn-outline-danger" onclick="return confirm('Are you sure you want to delete this comment?');">Delete</a>
                                         {% else %}
-                                            <a href="{% url 'report_comment' comment_id=comment.id%}" class="btn btn-dark"><i class="fas fa-biohazard"></i> Report Comment</a>
+                                            <a href="{% url 'report_comment' comment_id=comment.id%}" class="btn btn-dark" data-toggle="tooltip" data-placement="top" title="Report Comment"><i class="fas fa-biohazard"></i></a>
                                         {% endif %}
                                         </div>
                                     </div>
@@ -136,7 +144,7 @@
                             </div>
                         {% endfor %}
                     </div>
-                    <div class="create-comment mt-4">
+                    <div class="create-comment mt-4 px-4">
                         <h3>Add a Comment:</h3>
                         <form action="" method="post" enctype="multipart/form-data" class="p-3 border rounded">
                             {% csrf_token %}
