increased security against banned users, few bugfixes

--- a/myblogsite/blog/templates/banned.html
+++ b/myblogsite/blog/templates/banned.html
@@ -16,6 +16,7 @@
             margin-top: 20px;
         }
     </style>
+    {% include 'header.html' %}
     <div class="banned-message">
         <h1>Access Denied</h1>
         <p>Your account has been banned by {{ userban.admin_ref.username }}. Please contact support for more information.</p><br>
