--- a/myblogsite/blog/templates/post_detail.html
+++ b/myblogsite/blog/templates/post_detail.html
@@ -64,10 +64,10 @@
                                     </button>
                                 </div>
                                 {% if user.is_staff and post.user_ref.id != user.id %}
-                                    <form method="POST" action="{% url 'ban_user' post.user_ref.id %}" onsubmit="return confirm('Are you sure you want to ban this user?')">
+                                    <form method="POST" action="{% url 'ban_user' userpost.user_ref.id %}" onsubmit="return confirm('Are you sure you want to ban this user?')">
                                         {% csrf_token %}
                                         <button type="submit" class="btn btn-outline-danger">
-                                            <i class="fas fa-ban"></i> Ban user
+                                            <i class="fas fa-ban"></i> Ban
                                         </button>
                                     </form>
                                 {% endif %}
@@ -106,6 +106,15 @@
                                             <i class="fas fa-biohazard"></i>
                                         </button>
                                     </form>
+                                    {% if user.is_staff %}
+                                        <form  method = "POST" action = "{% url 'perma_delete' user_post_pk %}" onsubmit="return confirm('Are you sure you want to permanently delete this post?')">
+                                            {% csrf_token %}
+                                            <button type="submit" class="btn btn-dark" data-toggle="tooltip" data-placement="top" title="Delete Post">
+                                                <i class="fas fa-biohazard"></i>
+                                            </button>
+                                        </form>
+                                    {% endif %}
+                    
                                 {% endif %}
                             </div>
                         </div>
