--- a/myblogsite/blog/templates/banned.html
+++ b/myblogsite/blog/templates/banned.html
@@ -19,9 +19,15 @@
     {% include 'header.html' %}
     <div class="banned-message">
         <h1>Access Denied</h1>
-        <p>Your account has been banned by {{ userban.admin_ref.username }}. Please contact support for more information.</p><br>
-        <p>Reason: {{ userban.reason }}</p>
-        <a href="mailto:jeremybrad.lee@cit.edu" class="btn btn-primary">Contact Support</a>
         <h1>{{ userban.user_ref.username }}</h1>
+        <p>Your account has been banned by {{ userban.admin_ref.username }}. Please make a ban appeal explaining why you should be unbanned.</p><br>
+        <p>Reason: {{ userban.reason }}</p>
+        <form method = "POST" action = "{% url 'ban_appeal' %}">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-dark" data-toggle="tooltip" data-placement="top" title="Appeal ban">
+                <i class="fas fa-biohazard"></i>Appeal ban
+            </button>
+        </form>
+        
     </div>
 </html>
