--- a/myblogsite/blog/static/blog/css/global.css
+++ b/myblogsite/blog/static/blog/css/global.css
@@ -1,3 +1,33 @@
 * {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+.black-button {
+    background-color: #024CAA;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease;
+}
+
+.black-button :hover {
+    background-color: #fff;
+    border: solid 1px #024CAA;
+    color: #024CAA;
+}
+
+.orange-button {
+    background-color: #EC8305;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease;
+}
