--- a/myblogsite/blog/templates/header.html
+++ b/myblogsite/blog/templates/header.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <link rel="stylesheet" href="{% static 'blog/css/header.css' %}">
-    <nav class="navbar navbar-dark bg-dark">
+    <nav class="navbar">
         <div class="container d-flex justify-content-between align-items-center">
             <div class="d-flex align-items-center">
-                <img src="{% static 'images/logo.png' %}" alt="Logo" style="max-height:30px;">
+                <img src="{% static 'images/logo.png' %}" alt="Logo" style="max-height:50px;">
                 <a class="nav-link text-light ml-3" href="/">Home</a> 
             </div>
             <div class="d-flex align-items-center">
