--- a/myblogsite/blog/templates/home.html
+++ b/myblogsite/blog/templates/home.html
@@ -19,12 +19,15 @@
             <div class="inner-main">
                 <div class="inner-main-header">
                     <a class="nav-link nav-icon rounded-circle nav-link-faded mr-3 d-md-none" href="#" data-toggle="inner-sidebar"> <i class="material-icons">arrow_forward_ios</i></a>
-                    <button type="button" class="btn btn-dark" onclick= "location.href = '{% url 'new_post' %}'">New Post</button>
+                    <button type="button" class="black-button" onclick= "location.href = '{% url 'new_post' %}'">New Post</button>
                     <span class="input-icon input-icon-sm ml-auto w-auto">
                         <form action="" method="post" class="d-flex align-items-center">
                             {% csrf_token %}
-                            {{ search_form }}
-                            <button class="btn btn-primary ml-2" type="submit">Submit</button>
+                            {{ search_form.content }}
+                            &nbsp&nbsp
+                            {{ search_form.choices }}
+                            &nbsp&nbsp
+                            <button class="orange-button" type="submit">Submit</button>
                         </form>
                     </span> 
                 </div>
