--- a/myblogsite/blog/static/blog/css/header.css
+++ b/myblogsite/blog/static/blog/css/header.css
@@ -1,3 +1,6 @@
+nav{
+    background-color: #091057;
+}
 .navbar-custom {
     padding-top: 0.2rem !important;
     padding-bottom: 0.2rem !important;
