--- a/myblogsite/blog/templates/post_detail.html
+++ b/myblogsite/blog/templates/post_detail.html
@@ -24,13 +24,13 @@
 
                 {% include 'sidebar.html' %}
 
-                <div class="inner-main">
+                <div class="inner-main" style="margin: 0px 50px;">
                     <div class="inner-main-header mb-4" style="height: 100px;">
                         <div class="d-flex flex-column">
                             <!-- User Image and Info -->
                             <div class="d-flex align-items-center mb-2">
                                 <div style="cursor: pointer;">
-                                    <img src="/media/{{ post.user_ref.picture }}" alt="{{ post.user_ref.username }}" class="rounded-circle" style="width: 40px; height: 40px; object-fit: cover;" onclick="window.location.href='/profile/{{ post.user_ref.id }}'">
+                                    <img src="/media/{{ post.user_ref.picture }}" alt="{{ post.user_ref.username }}" class="rounded-circle" style="width: 40px; height: 40px; object-fit: fill;" onclick="window.location.href='/profile/{{ post.user_ref.id }}'">
                                 </div>
                                 <h5 class="text-muted ml-2 mb-0" onclick="window.location.href='/profile/{{ post.user_ref.id }}'" style="cursor: pointer;">by {{ post.user_ref.username }}</h5>    
                                 <span class="ml-2 text-muted"> • {{ post.created_at }}</span>
@@ -46,14 +46,14 @@
                         <p>{{ post.content }}</p>
                         {% if post.image %}
                         <div class="d-flex justify-content-center">
-                            <img src="{{ post.image.url }}" alt="{{ post.title }}" class="img-fluid rounded" style="cursor:pointer;">
+                            <img src="{{ post.image.url }}" alt="{{ post.title }}" class="post-image img-fluid rounded" style="cursor:pointer; height: 400px; border: solid 1px #FFF; box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); transition: background-color 0.3s ease;">
                         </div>
                         {% endif %}
                     </div>
                     <div class="container">
                         <div class="d-flex justify-content-between">
                             <div class="d-flex align-items-center">
-                                <div class="vote-buttons mr-3">
+                                <div class="vote-buttons mr-3" style="width: 120px;">
                                     <button id="post_upvote" class="btn btn-outline-success mr-2" style="cursor:pointer; display:inline-block;">
                                         <i class="fas fa-thumbs-up"></i> 
                                         <div id="post-upvote-count">{{ post_upvotes }}</div>
@@ -62,20 +62,21 @@
                                         <i class="fas fa-thumbs-down"></i> 
                                         <div id="post-downvote-count">{{ post_downvotes }}</div>
                                     </button>
-                                </div>
-                                {% if user.is_staff and post.user_ref.id != user.id %}
+                                    {% if user.is_staff and post.user_ref.id != user.id %}
                                     <form method="POST" action="{% url 'ban_user' userpost.user_ref.id %}" onsubmit="return confirm('Are you sure you want to ban this user?')">
                                         {% csrf_token %}
-                                        <button type="submit" class="btn btn-outline-danger">
+                                        <button type="submit" class="btn btn-outline-danger" style="width: 96px; margin-top: 20px;">
                                             <i class="fas fa-ban"></i> Ban
                                         </button>
                                     </form>
-                                {% endif %}
+                                    {% endif %}
+                                </div>
+                                
                             </div>
 
-                            <div class="d-flex flex-wrap mt-3">
+                            <div class="d-flex flex-wrap mt-3" style="align-content: center; justify-content: center; padding-left: 20px;">
                                 {% for tag in tags %}
-                                    <span class="badge badge-primary mr-2 mb-2">{{ tag.forum_ref.title }}</span>
+                                    <span class="badge badge-primary mr-2 mb-2" style="background-color: #EC8305;">&nbsp&nbsp{{ tag.forum_ref.title }}&nbsp&nbsp</span>
                                 {% endfor %}
                             </div>
 
@@ -109,8 +110,8 @@
                                     {% if user.is_staff %}
                                         <form  method = "POST" action = "{% url 'perma_delete' user_post_pk %}" onsubmit="return confirm('Are you sure you want to permanently delete this post?')">
                                             {% csrf_token %}
-                                            <button type="submit" class="btn btn-dark" data-toggle="tooltip" data-placement="top" title="Delete Post">
-                                                <i class="fas fa-biohazard"></i>
+                                            <button type="submit" class="btn btn-dark" data-toggle="tooltip" data-placement="top" title="Delete Post" style="margin-left: 8px; background-color: red;">
+                                                <i class="fas fa-trash-alt"></i>
                                             </button>
                                         </form>
                                     {% endif %}
@@ -133,8 +134,16 @@
                                         </div>
                                         <div>
                                         {% if user.id == comment.user_ref__id %}
-                                            <a href="{% url 'edit_comment' comment_id=comment.id user_post_id=user_post_pk %}" class="btn btn-sm btn-outline-primary">Edit</a>
-                                            <a href="{% url 'delete_comment' comment_id=comment.id user_post_id=user_post_pk %}" class="btn btn-sm btn-outline-danger" onclick="return confirm('Are you sure you want to delete this comment?');">Delete</a>
+                                            <a href="{% url 'edit_comment' comment_id=comment.id user_post_id=user_post_pk %}">
+                                                <button class="orange-button">
+                                                    Edit
+                                                </button>
+                                            </a>
+                                            <a href="{% url 'delete_comment' comment_id=comment.id user_post_id=user_post_pk %}" onclick="return confirm('Are you sure you want to delete this comment?');">
+                                                <button class="black-button">
+                                                    Delete
+                                                </button>
+                                            </a>
                                         {% else %}
                                             <a href="{% url 'report_comment' comment_id=comment.id%}" class="btn btn-dark" data-toggle="tooltip" data-placement="top" title="Report Comment"><i class="fas fa-biohazard"></i></a>
                                         {% endif %}
@@ -146,8 +155,12 @@
                                     {% endif %}
                                     <div class="mt-3 comment-vote-counts">
                                         <input type="hidden" name="comment_id" value="{{ comment.id }}">
-                                        <button class="btn btn-outline-success btn-sm mr-2 comment-upvote" data-comment-id="{{ comment.id }}"><i class="fas fa-thumbs-up"> </i>{{ comment.upvotes }}</button>
-                                        <button class="btn btn-outline-danger btn-sm comment-downvote" data-comment-id="{{ comment.id }}"><i class="fas fa-thumbs-down"> </i> {{ comment.downvotes }}</button>
+                                        <button class="btn btn-outline-success btn-sm mr-2 comment-upvote" data-comment-id="{{ comment.id }}">
+                                            <i class="fas fa-thumbs-up"> </i>{{ comment.upvotes }}
+                                        </button>
+                                        <button class="btn btn-outline-danger btn-sm comment-downvote" data-comment-id="{{ comment.id }}">
+                                            <i class="fas fa-thumbs-down"> </i> {{ comment.downvotes }}
+                                        </button>
                                     </div>
                                 </div>
                             </div>
